There is a gap in front of the video clip #94287

Closed
opened 2021-12-21 04:18:10 +01:00 by huanxing · 10 comments

System Information
Operating system: windows 10 ltsc
Graphics card: GTX 750

Blender Version
Broken: blender-3.1.0-alpha+master
Worked: 3.0

Short description of error

For MTS format video, there is always a gap between each video clip when importing

https://i.bmp.ovh/imgs/2021/12/8c7bebcea11cf92e.png

Exact steps for others to reproduce the error
1.Copy multiple clips from Sony camera to my computer
2.open VSE and import the video you just copied

**System Information** Operating system: windows 10 ltsc Graphics card: GTX 750 **Blender Version** Broken: blender-3.1.0-alpha+master Worked: 3.0 **Short description of error** For MTS format video, there is always a gap between each video clip when importing https://i.bmp.ovh/imgs/2021/12/8c7bebcea11cf92e.png **Exact steps for others to reproduce the error** 1.Copy multiple clips from Sony camera to my computer 2.open VSE and import the video you just copied
Author

Added subscriber: @huanxing

Added subscriber: @huanxing
huanxing changed title from There is a gap in front of the video clip to there is a gap in front of the video clip 2021-12-21 04:26:54 +01:00
huanxing changed title from there is a gap in front of the video clip to There is a gap in front of the video clip 2021-12-21 04:28:34 +01:00

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I have added code to trim sound strip so it is never longer than video in 0966eab8e9. Not sure what is version you have tested with. If you click in Blender on File > Report a Bug, it will fill in hash for you (Sorry should have recommended that approach).

Can you provide short sample movie file where this happens?

I have added code to trim sound strip so it is never longer than video in 0966eab8e9. Not sure what is version you have tested with. If you click in Blender on File > Report a Bug, it will fill in hash for you (Sorry should have recommended that approach). Can you provide short sample movie file where this happens?
Author

video.7z
I use the daily version, and upload videos and source files in packages

[video.7z](https://archive.blender.org/developer/F12768960/video.7z) I use the daily version, and upload videos and source files in packages

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

I see the issue, sound is also offset to video and offsets are still applied even if length is clamped. Will fix this case too, I did not have such files available.

I see the issue, sound is also offset to video and offsets are still applied even if length is clamped. Will fix this case too, I did not have such files available.
Author

There are several videos provided by me in the compressed package. Download and import them

There are several videos provided by me in the compressed package. Download and import them

This issue was referenced by 68c2650b03

This issue was referenced by 68c2650b03f417fd48bcc0f682fcc71a2a4c9c81

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2022-01-31 22:31:47 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94287
No description provided.